# wasi-passthrough

./: Cargo.toml  rust-toolchain.toml
src/: bindings.rs  cli.rs  clocks.rs  filesystem.rs  http.rs  io.rs  lib.rs  sockets.rs
wit/: passthrough.wit
